# widow-producer-master

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  amti.json  amti.md  amtiExample.j2  amtiExample.xml  amtiExampleMapping.json  amtiExampleRendered.xml  amtiWidowData.json  catalog.xml  pylint.sh  pyproject.toml  requirements.txt  run-checks.sh  update_requirements.sh  xmlConfigBuilder.py  xmlValidator.py
docs/: Contributing.md
uci/: __init__.py
uci/parser/: README.md  xmlparser.py
uci/parser/tests/: test_parser.py
uci/parser/tests/example_xml/: PositionReportDetailed.xml  amtiExample.xml  missionPlanExample.xml  opZonePolygonExample.xml  opZoneShapeExample.xml  positionReportExample.xml  position_report.xml  routePlanExample.xml  smtiExample.xml  strikeCapabilityStatusExample.xml  strikeExample.xml  subSystemConfigurationExample.xml  subSystemStatusExample.xml  systemStatusExample.xml  taskExample.xml  taskStrikeExample.xml
uci/transformer/tests/: amtiExample.json  assets.json
uci_v2_schemas/: UCI_SecurityMarkings_v2_0_Errata_1.xsd  UCI_Versioning_v2_0_Errata_1.xsd
