[tool.poetry]
name = "widow-producer"
version = "0.1.0"
description = "A microservice for producing and sending data to an outside databus"
authors = ["Richard Autry <richard.autry@braingu.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.0"
pytest = "^7.1.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
flake8 = "3.9.2"
black = "^22.3.0"
pylint = "^2.14.0"
pre-commit = "2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
extend-exclude = '''
venv
'''

[tool.coverage.run]
omit = [
    "venv/*",
    "build/*",
    "*tests/*"
]

[tool.isort]
profile="black"
skip = [
    "venv/",
    "build/"
]
skip_glob = []
